2018-12-24  Karl Berry  <karl@tug.org>

	First deployment to production of *html files from this new code,
	through tb123 == 39-3.
	* Makefile (install-test, install, all-install, diff): new targets.
	* capaccum-author.pl: one more space in table.
	* capconv.pl: diagnostics, doc.
	* capout.pl (contents_link_from_seq): tb*capsule.txt now,
	no longer *.tex.
	(write_entries): Output difficulty with nbsp (for Intermediate Plus).
	* tb56capsule.txt,
	* tb57capsule.txt,
	* tb61capsule.txt,
	* tb64capsule.txt: avoid ties around "and" in authors,
	so as not to incur even more complication in splitting.
	
	* list-translations.txt ($\dag$, \ASCII, \MathML): tb123 abbrevs.
	* lists-unifications.txt (Coriasco, Siebenmann): adjust.
	
	* tb123capsule.txt: new current issue.
	* tb122capsule.txt: make public.

2018-12-17  Karl Berry  <karl@freefriends.org>

	* capaccum.pl (lists_url_html, lists_author_html,
	lists_entry_trailer): new fns.
	(lists_vol_iss_link): add lists_ prefix.
	* capaccum-keyword.pl,
	* capaccum-title.pl,
	* capaccum-author.pl: call those new subroutines.

	* capaccum-author.pl: rm debug msg

2018-12-16  Karl Berry  <karl@freefriends.org>

	* capaccum-title.pl,
	* capaccum-keyword.pl,
	* capaccum-author.pl: newline after /small.
	(find_authors): special case to make Han = Thanh.

	* capaccum.pl (vol_iss_link): leave newline to caller (not wanted
	in author).

	* capaccum-keyword.pl: ?:

2018-12-14  Karl Berry  <karl@freefriends.org>

	* capconv.pl: Advogato another known one-word author
	* capaccum-author.pl (find_authors): handle %person.
	* capconv.pl (transform_author): check for et al. not unified.

2018-12-13  Karl Berry  <karl@freefriends.org>

	* capaccum-keyword.pl: write category list as table instead of
	bullets.
	* capaccum.pl: doc

2018-12-11  Karl Berry  <karl@freefriends.org>

	* capconv.pl (transform_author): split at \& and allow optional
	comma before "and".
	* capaccum-author.pl: sort_by_issue_page (no title).
