@@ -658,7 +658,7 @@ access</a>.
 
 \capsule{Reports and notices}
   {Book Reviews}
-  {Boris Veytsman}%person|Boris Veytsman and Hermann Zapf
+  {Boris Veytsman}%person|Hermann Zapf
   {Book review: \textsl{About more alphabets: The types of Hermann Zapf}, by Jerry Kelly}
   {review of this book on Zapf's life and work}
   {232}
