@@ -399,7 +399,7 @@ access</a>.
 
 \capsule{Intermediate}
   {Fonts}
-  {Yue Wang}%person|Charles Bigelow and Yue Wang
+  {Yue Wang}%person|Charles Bigelow
   {Interview with Charles Bigelow}
   {in-depth discussion of Lucida and typography}
   {136-167}
@@ -690,7 +690,7 @@ access</a>.
 
 \capsule{Reports and notices}
   {Book Reviews}
-  {Boris Veytsman}%person|Boris Veytsman and Hermann Zapf
+  {Boris Veytsman}%person|Hermann Zapf
   {Book review: \textit{Zapf Exhibition: The Calligraphy of Hermann \& Gudrun Zapf}}
   {description of the catalogue of this 2011 exhibition in Japan}
   {229}
@@ -700,7 +700,7 @@ access</a>.
 
 \capsule{Reports and notices}
   {Book Reviews}
-  {Will Adams}%person|Will Adams and Hermann Zapf
+  {Will Adams}%person|Hermann Zapf
   {Book review: \textit{What Our Lettering Needs}, by Rick Cusick}
   {the contribution of Hermann Zapf to calligraphy \& type design at Hallmark cards}
   {230}
