@@ -730,7 +730,7 @@ access</a>.
 
 \capsule{Reports and notices}
   {Book Reviews}
-  {David Walden}%person|David Walden and Edgar Daylight and Donald Knuth
+  {David Walden}%person|Edgar Daylight and Donald Knuth
   {Book review: \textit{Essential Knuth}, by Edgar Daylight}
   {an extensive interview focused on Knuth's computer science achievements}
   {368}
