@@ -661,7 +661,7 @@ access</a>.
 
 \capsule{Reports and notices}
   {Book Reviews}
-  {David Walden}%person|David Walden and Edgar Daylight and Donald Knuth
+  {David Walden}%person|Edgar Daylight and Donald Knuth
   {Book review: {\sl Algorithmic Barriers Falling: P=\,NP?},\\by Donald E. Knuth and Edgar Daylight}
   {review of this second extended interview with Knuth}
   {57}
