@@ -730,7 +730,7 @@ access</a>.
 
 \capsule{Reports and notices}
   {General Delivery}%add|Obituaries
-  {\Thanh}%person|\Thanh and Hermann Zapf
+  {\Thanh}%person|Hermann Zapf
   {Farewell Hermann Zapf}
   {}
   {93}
@@ -740,7 +740,7 @@ access</a>.
 
 \capsule{Reports and notices}
   {General Delivery}%add|Obituaries
-  {Kris Holmes}%person|Kris Holmes and Hermann Zapf
+  {Kris Holmes}%person|Hermann Zapf
   {Remembering Hermann Zapf}
   {}
   {93-94\offset{.1}}
@@ -750,7 +750,7 @@ access</a>.
 
 \capsule{Reports and notices}
   {General Delivery}%add|Obituaries
-  {Peter Karow}%person|Peter Karow and Hermann Zapf
+  {Peter Karow}%person|Hermann Zapf
   {Digital typography with Hermann Zapf}
   {}
   {95-99}
@@ -760,7 +760,7 @@ access</a>.
 
 \capsule{Reports and notices}
   {General Delivery}%add|Obituaries
-  {Donald Knuth}%person|Donald Knuth and Hermann Zapf
+  {Donald Knuth}%person|Hermann Zapf
   {Dedication to Hermann Zapf, 1918--2015}
   {}
   {92}
