@@ -320,7 +320,7 @@ access</a>.
 
 \capsule{}
   {General Delivery}
-  {David Walden}%person|Pavneet Arora and David Walden
+  {David Walden}%person|Pavneet Arora
   {Interview with Pavneet Arora}
   {}
   {131-136}
@@ -800,7 +800,7 @@ access</a>.
 
 \capsule{Reports and notices}
   {Book Reviews}
-  {Boris Veytsman}%person|Boris Veytsman and Robert Bringhurst and Hermann Zapf
+  {Boris Veytsman}%person|Robert Bringhurst and Hermann Zapf
   {\textsl{Palatino:\ The natural history of a typeface} by Robert Bringhurst}
   {review of this remarkable and beautiful book on Hermann Zapf's Palatino family}
   {229-231}
