@@ -337,7 +337,7 @@ access</a>.
 
 \capsule{}
   {General Delivery}
-  {David Walden}%person|David Walden and Federico Garcia-De Castro
+  {David Walden}%person|Federico Garcia-De Castro
   {Interview with Federico Garcia-De Castro}
   {}
   {259-263}
