@@ -343,7 +343,7 @@ access</a>.
 
 \capsule{}
   {General Delivery}
-  {David Walden}%person|David Walden and Scott Pakin
+  {David Walden}%person|Scott Pakin
   {Interview with Scott Pakin}
   {developer of many \LaTeX\ packages and other \TeX-related tools}
   {7-10}
@@ -812,7 +812,7 @@ access</a>.
 
 \capsule{Reports and notices}
   {Book Reviews}
-  {Boris Veytsman}%person|Boris Veytsman and David Pankow and Hermann Zapf
+  {Boris Veytsman}%person|David Pankow and Hermann Zapf
   {\textsl{Manuale Calligraphicum}, David Pankow, ed.}
   {review of this beautiful collection of calligraphy by students of Hermann Zapf}
   {93}
