@@ -384,16 +384,6 @@ access</a>.
   {}
   {}
 
-%\capsule{}
-%  {General Delivery}
-%  {David Walden}%person|David Walden and Scott Pakin
-%  {Interview with Scott Pakin}
-%  {developer of many \LaTeX\ packages and other \TeX-related tools}
-%  {\getfirstpage{pakin}}
-%  {/TUGboat/!TBIDENT!pakin.pdf}
-%  {}
-%  {}
-%
 %%%%%%%%\capsule{}
 %%%%%%%%  {Software \& Tools}
 %%%%%%%%  {\TeX\ Collection editors}
