@@ -155,7 +155,7 @@ access</a>.
 
 \capsule{}
   {General Delivery}
-  {David Walden}%person|David Walden and Michael Sharpe
+  {David Walden}%person|Michael Sharpe
   {Interview: Michael Sharpe}
   {long-time user of \TeX\ and recently active in the \TeX\ fonts world}
   {294-298}
