@@ -162,16 +162,6 @@ access</a>.
   {}
   {}
 
-%\capsule{}
-%  {General Delivery}
-%  {David Walden}%person|David Walden and Michael Sharpe
-%  {Interview: Michael Sharpe}
-%  {long-time user of \TeX\ and recently active in the \TeX\ fonts world}
-%  {\getfirstpage{sharpe}}
-%  {/TUGboat/!TBIDENT!sharpe.pdf}
-%  {}
-%  {}
-%
 %%%%%%%%%\capsule{}
 %%%%%%%%%  {Software \& Tools}
 %%%%%%%%%  {\TeX\ Collection editors}
