@@ -342,7 +342,8 @@ from <a href="http://walden-family.com/ieee/texhistory.html"
   {275-275}
   {https://www.tug.org/members/TUGboat/!TBIDENT!berry-bst.pdf}
   {}
-  {}
+  {<a href="/TUGboat/tb39-3/ieeelike.zip">The ieeelike.bst example</a>
+mentioned in the article.}
 
 %\capsule{}
 %  {Software \& Tools}
