@@ -90,7 +90,7 @@ The dues increase and number of issues}
 
 \capsule{}%subsec
         {General Delivery}%add|Obituaries
-        {Donald~Knuth}%person|Donald Knuth and Arthur Lee Samuel
+        {Donald~Knuth}%person|Arthur Lee Samuel
         {Arthur Lee Samuel, 1901--1990}
         {}
         {497-498}
