@@ -74,7 +74,7 @@
 
 \capsule{}%subsec
         {General Delivery}
-        {Barbara~Beeton}%person|Barbara Beeton and Cathy Booth
+        {Barbara~Beeton}%person|Cathy Booth
         {Editorial comments}
         {}
         {10-11}
@@ -88,7 +88,7 @@ Trip report: Euro\TeX, GUTenberg'91\\
 
 \capsule{}%subsecnn
         {General Delivery}%add|Obituaries
-        {Barbara Beeton}%person|Barbara Beeton and Samuel B. Whidden
+        {Barbara Beeton}%person|Samuel B. Whidden
         {Samuel B. Whidden, 1930--1991}
         {}
         {11-12}
