@@ -36,7 +36,7 @@
 
 \capsule{}
         {}%replace|Obituaries
-        {Malcolm Clark}%person|Malcolm Clark and Yuri Melnichuk
+        {Malcolm Clark}%person|Yuri Melnichuk
         {Obituary --- Yuri Melnichuk}
         {}
         {158\offset{.5}}
