@@ -83,7 +83,7 @@
 
 \capsule{}%subsec
         {General Delivery}%replace|Knuth Sessions
-        {Advogato\CONNECT{}(Raph\CONNECT{}Levien)}%person|Donald Knuth and Raph Levien and Advogato
+        {Advogato\CONNECT{}(Raph\CONNECT{}Levien)}%person|Donald Knuth and Raph Levien
         {{Interview: Donald E. Knuth}}
         {}
         {103-110}
