@@ -93,7 +93,7 @@ Legibility study online}
 
 \capsule{}
         {General Delivery}
-        {}%person|Leslie Lamport and Gunter M. Ziegler
+        {G\"unter M. Ziegler}%person|Leslie Lamport
         {How (La)TeX changed the face of mathematics: An E-interview with Leslie Lamport, the author of LaTeX}
         {}
         {20}
@@ -109,7 +109,7 @@ Legibility study online}
 
 \capsule{}
         {Font Forum}
-        {Frank Mittelbach}%person|Frank Mittelbach and Hermann Zapf
+        {Frank Mittelbach}%person|Hermann Zapf
         {Laudatio for Professor Hermann Zapf}
         {}
         {24}
