@@ -63,7 +63,7 @@ other TeX projects.
 
 \capsule{}
         {General Delivery}%add|Obituaries
-        {Barbara Beeton}%person|Barbara Beeton and Daniel Taupin and Don Knuth and Michael Downes
+        {Barbara Beeton}%person|Daniel Taupin and Don Knuth and Michael Downes
         {Editorial comments}
         {}
         {160}
@@ -79,8 +79,8 @@ Hidden \TeX{} use in Germany}
 
 \capsule{}
         {General Delivery}%add|Obituaries
-        {John Plaice}%person|John Plaice and Daniel Taupin
-        {Daniel Taupin, 1936-2003}
+        {John Plaice}%person|Daniel Taupin
+        {Daniel Taupin, 1936--2003}
         {}
         {162}
         {/TUGboat/tb24-2/tb77plaice.pdf}
