@@ -260,7 +260,7 @@ Letters in stone}
 
 \capsule{Introductory}
   {General Delivery}
-  {Gianluca Pignalberi}%person|Donald Knuth and Gianluca Pignalberi
+  {Gianluca Pignalberi}%person|Donald Knuth
   {Interview with Donald E.~Knuth}
   {reprinted from the {\sl Free Software Magazine}}
   {183}
