@@ -222,7 +222,7 @@ issue as one pdf</a> (18mb).
 
 \capsule{Introductory}
   {Talks}%replace|General Delivery
-  {Taco Hoekwater}%person|Taco Hoekwater and Hermann Zapf and Donald Knuth
+  {Taco Hoekwater}%person|Hermann Zapf and Donald Knuth
   {Panel discussion with Hermann Zapf and Donald Knuth}
   {}
   {76}
