@@ -256,7 +256,7 @@ access</a>.
 
 \capsule{Introductory}
   {Book Reviews}
-  {Hans Hagen \aand Taco Hoekwater}%person|Hans Hagen and Taco Hoekwater and Hermann Zapf
+  {Hans Hagen \aand Taco Hoekwater}%person|Hermann Zapf
   {Alphabetgeschichten by Hermann Zapf}
   {review of Zapf's memoir, with several illustrations}
   {174}
