@@ -303,7 +303,7 @@ access</a>.
 
 \capsule{Introductory}
   {Typography}
-  {Vassilios Tsagkalos}%person|Vassilios Tsagkalos and Georgios Matthiopoulos
+  {Vassilios Tsagkalos}%person|Georgios Matthiopoulos
   {The Greek Font Society}
   {background, goals, and accomplishments of the \acro{GFS}; interview with Georgios Matthiopoulos, type designer}
   {242}
